platform/content/docs/runtime/v0.10.0/guides/hooks.mdx
---
title: "Lifecycle Hooks"
description: "Instrument, audit, and extend @personaai/runtime execution with 11 async lifecycle hooks."
sdk: "runtime"
version: "0.10.0"
---

# Lifecycle Hooks

Lifecycle hooks allow your host application to intercept, audit, record metrics, and synchronize database records across every phase of runtime execution.

Hooks are **plain async functions**, not middleware. When a hook is omitted, the runtime proceeds with sensible defaults. If a hook throws an error, the runtime safely catches the exception and returns a sanitized HTTP error to the client.

```ts
import { createRuntime, RuntimeHooks } from '@personaai/runtime';

const hooks: RuntimeHooks = {
  beforeRun: async (ctx) => { /* ... */ },
  afterRun: async (ctx, result) => { /* ... */ },
  onError: async (ctx, error) => { /* ... */ },
  beforeToolCall: async (ctx) => { /* ... */ },
  afterToolCall: async (ctx, result) => { /* ... */ },
  beforeWorkflowNode: async (ctx) => { /* ... */ },
  afterWorkflowNode: async (ctx, output) => { /* ... */ },
  onFileUpload: async (ctx) => { /* ... */ },
  onThreadCreate: async (ctx) => { /* ... */ },
  onMemoryWrite: async (ctx) => { /* ... */ },
  onVoiceSessionCreate: async (ctx) => { /* ... */ },
};
```

---

## Complete Hooks Reference

### 1. `beforeRun(ctx: RunContext)`
Fires immediately before `POST /chat`, `POST /architect`, or `POST /workflows/:id/stream` begins streaming.

- **Context Object:**
  - `userId`: Resolved external user ID.
  - `kind`: `'chat'` | `'architect'` | `'workflow'`.
  - `agentId` *(optional)*: Target agent ID (set for chat, absent for architect/workflow).
  - `workflowId` *(optional)*: Target workflow ID (present when `kind: 'workflow'`).
  - `threadId` *(optional)*: Thread ID if continuing an existing conversation.
  - `messages` *(optional)*: Array of inbound `ChatMessageInput` objects (present for chat).
  - `input` *(optional)*: Trigger input object for workflow executions.
- **Common Use Case:** Rate limiting, user quota validation, logging prompts for safety.

---

### 2. `afterRun(ctx: RunContext, result: RunResult)`
Fires when an agent turn completes (even if completed with an in-band `RUN_ERROR` event).

- **Result Object:**
  - `text`: Complete assistant response text (concatenated deltas).
  - `eventCount`: Total number of AG-UI events emitted.
  - `interrupted`: `true` if the run paused on a Human-in-the-Loop clarification interrupt.
  - `erroredInBand`: `true` if the stream terminated with a `RUN_ERROR` event.
- **Common Use Case:** Cost accounting, recording assistant answers in your local database.

---

### 3. `onError(ctx: ErrorContext, error: unknown)`
Fires when an unhandled exception or network failure occurs during request processing.

- **Context Object:**
  - `userId`: Resolved user ID (or `null` if failure occurred during auth).
  - `phase`: `'auth'` | `'chat'` | `'architect'` | `'workflow'`.
  - `agentId` *(optional)*, `workflowId` *(optional)*, `threadId` *(optional)*.
- **Note:** Does **not** fire for in-band `RUN_ERROR` events emitted by LangGraph (which are reported in `afterRun`). Fires only on unexpected system/network exceptions.

---

### 4. `beforeToolCall(ctx: ToolCallContext)`
Fires when an agent decides to invoke an external tool (emitted on `TOOL_CALL_START`).

- **Context Object:**
  - `userId`: Resolved user ID.
  - `agentId` *(optional)*, `threadId` *(optional)*.
  - `toolName`: Name of the tool being called (e.g. `search_knowledge_base`, `execute_sql`).
  - `toolCallId`: Unique invocation identifier.
- **Common Use Case:** Security logging, DLP auditing, monitoring external API calls.

---

### 5. `afterToolCall(ctx: ToolCallContext, result: unknown)`
Fires when a tool execution produces an output (emitted on `TOOL_CALL_RESULT`).

- **Result:** Raw tool return value (string or JSON-parsed object).
- **Common Use Case:** Auditing sensitive data returned from third-party tools.

---

### 6. `beforeWorkflowNode(ctx: WorkflowNodeContext)`
Fires when a node begins execution within a workflow run (emitted on custom `workflow_node_started` event).

- **Context Object:**
  - `userId`: Resolved external user ID.
  - `workflowId`: Workflow ID being executed.
  - `nodeId`: Graph node ID (e.g. `agent-step-1`, `condition-step-2`).
  - `nodeType`: Node type identifier (`trigger`, `agent`, `condition`, `tool`, etc.).
  - `nodeLabel`: Human-readable label defined in the visual canvas.
  - `input` *(optional)*: Input payload evaluated for this node.
- **Common Use Case:** Fine-grained node execution logging, tracing, telemetry.

---

### 7. `afterWorkflowNode(ctx: WorkflowNodeContext, output: unknown)`
Fires when a node finishes execution within a workflow run (emitted on custom `workflow_node_completed` event).

- **Context Object:** Same `WorkflowNodeContext` as `beforeWorkflowNode`.
- **Output:** Node output payload or transformed evaluation result.
- **Common Use Case:** Auditing intermediate workflow outputs, recording step durations.

---

### 8. `onThreadCreate(ctx: ThreadCreateContext)`
Fires whenever a thread is minted — either explicitly via `POST /threads` or implicitly during `POST /chat` when no `threadId` was provided.

- **Context Object:**
  - `userId`: Resolved user ID.
  - `agentId`: Target agent ID.
  - `threadId`: Newly created thread ID.
- **Common Use Case:** Syncing thread records to your local PostgreSQL / Prisma database.

---

### 9. `onFileUpload(ctx: FileUploadContext)`
Fires after a file is successfully uploaded via `POST /files`.

- **Context Object:**
  - `userId`: Resolved user ID.
  - `fileName`: Original file name.
  - `mimeType` *(optional)*: Uploaded file MIME type.
- **Common Use Case:** Antivirus scanning triggers, audit logging file attachments.

---

### 10. `onMemoryWrite(ctx: MemoryWriteContext)`
Fires after an agent or user writes to long-term memory via `PUT /memory/file`.

- **Context Object:**
  - `userId`: Resolved user ID.
  - `agentId` *(optional)*: Present if `scope: 'agent'`.
  - `path`: Memory file path (e.g. `/preferences/tone.md`).

---

### 11. `onVoiceSessionCreate(ctx: VoiceSessionCreateContext)`
Fires when an ephemeral Gemini Live real-time audio session ticket is minted via `POST /voice/sessions`.

- **Context Object:**
  - `userId`: Resolved user ID.
  - `agentId`: Target agent ID.
  - `threadId` *(optional)*: Conversation thread associated with the voice session.

---

## Comprehensive Implementation Example

Below is a production-ready example syncing conversation records to a local database and emitting metrics to an analytics collector:

```ts
import { createRuntime } from '@personaai/runtime';
import { db } from './db.js'; // Prisma or your ORM
import { metrics } from './metrics.js'; // Datadog / Prometheus

const runtime = createRuntime({
  baseUrl: process.env.PERSONA_BASE_URL!,
  credential: process.env.PERSONA_CREDENTIAL!,
  resolveUser: async (req) => req.headers['x-user-id'] ?? null,

  hooks: {
    // 1. Synchronize newly created threads to local database
    onThreadCreate: async (ctx) => {
      await db.thread.create({
        data: {
          id: ctx.threadId,
          userId: ctx.userId,
          agentId: ctx.agentId,
          createdAt: new Date(),
        },
      });
      metrics.increment('persona.threads.created', { agent: ctx.agentId });
    },

    // 2. Audit and count tool executions
    beforeToolCall: async (ctx) => {
      console.log(`[Tool Call Start] User: ${ctx.userId} invoked tool: ${ctx.toolName}`);
      metrics.increment('persona.tool_calls.started', { tool: ctx.toolName });
    },

    afterToolCall: async (ctx, result) => {
      metrics.increment('persona.tool_calls.completed', { tool: ctx.toolName });
    },

    // 3. Save assistant message and track turn latency
    afterRun: async (ctx, result) => {
      if (ctx.threadId && result.text) {
        await db.message.create({
          data: {
            threadId: ctx.threadId,
            role: 'assistant',
            content: result.text,
            eventCount: result.eventCount,
            createdAt: new Date(),
          },
        });
      }

      metrics.gauge('persona.run.events_count', result.eventCount);
      if (result.erroredInBand) {
        metrics.increment('persona.run.in_band_errors');
      }
    },

    // 4. Capture unexpected server failures
    onError: async (ctx, error) => {
      console.error(`[Runtime Exception] Phase: ${ctx.phase}, User: ${ctx.userId}`, error);
      metrics.increment('persona.run.exceptions', { phase: ctx.phase });
    },
  },
});
```

---

## Next Steps
- Learn how to serve code-defined tools with [Tool Manifests](/docs/runtime/v0.10.0/guides/manifests).
- Build a custom adapter with [Custom Host Integration](/docs/runtime/v0.10.0/guides/custom-host).
